--- a/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/samplecode/BUILD.bazel
@@ -7,6 +7,7 @@ TESTS = [
     "SampleCodeWriterTest",
     "ServiceClientSampleCodeComposerTest",
     "SettingsSampleCodeComposerTest",
+    "ExecutableSampleComposerTest"
 ]
 
 filegroup(
