--- a/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -16,6 +16,7 @@ TESTS = [
     "ServiceYamlParserTest",
     "SourceCodeInfoParserTest",
     "TypeParserTest",
+    "RoutingRuleParserTest"
 ]
 
 filegroup(
@@ -45,6 +46,7 @@ filegroup(
         "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
         "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
         "@com_google_api_api_common//jar",
+        "@com_google_api_grpc_proto_google_common_protos",
         "@com_google_googleapis//google/api:api_java_proto",
         "@com_google_googleapis//google/rpc:rpc_java_proto",
         "@com_google_protobuf//:protobuf_java",
