chore: fix duplicate sourcesJar source entries (#1602)

--- a/gax-java/build.gradle
+++ b/gax-java/build.gradle
@@ -138,7 +138,7 @@ configure(javaProjects) {
   task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier = 'sources'
 
-    from sourceSets.main.allSource, sourceSets.test.allSource, sourceSets.main.resources.srcDirs
+    from sourceSets.main.allSource, sourceSets.test.allSource
     exclude('**/*Test.java')
   }
 
