--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,6 @@
     </dependency>
     <dependency>
       <groupId>com.google.api</groupId>
-      <artifactId>api-common</artifactId>
-      <version>1.9.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.api</groupId>
       <artifactId>gax</artifactId>
       <version>2.12.0</version>
     </dependency>
@@ -109,21 +104,6 @@
       <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value-annotations</artifactId>
       <version>1.7.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>3.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.6</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.protobuf</groupId>
-      <artifactId>protobuf-java</artifactId>
-      <version>3.19.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.protobuf</groupId>
@@ -182,46 +162,57 @@
       <artifactId>metadata-proto</artifactId>
       <version>0.0.0</version>
     </dependency>
+
+    <!-- for tests below -->
     <dependency>
       <groupId>com.google.api</groupId>
       <artifactId>common-resources-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>com.google.api</groupId>
       <artifactId>logging-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.api</groupId>
       <artifactId>pubsub-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>testdata</groupId>
       <artifactId>deprecated-service-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>testdata</groupId>
       <artifactId>bookshop-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>testdata</groupId>
       <artifactId>showcase-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>testdata</groupId>
       <artifactId>testgapic-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>testdata</groupId>
       <artifactId>explicit-dynamic-routing-headers-testing-proto</artifactId>
       <version>0.0.0</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
