--- a/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -16,6 +16,21 @@ filegroup(
     srcs = ["logging.yaml"],
 )
 
+genrule(
+    name = "basic_proto_descriptor",
+    srcs = [
+        "basic.proto",
+    ],
+    outs = ["basic_proto.descriptor"],
+    # CircleCI does not have protoc installed.
+    cmd = "$(location @com_google_protobuf//:protoc) " +
+          "--include_source_info --include_imports --descriptor_set_out=$@ $(SRCS)",
+    message = "Generating proto descriptor",
+    tools = [
+        "@com_google_protobuf//:protoc",
+    ],
+)
+
 proto_library(
     name = "bookshop_proto",
     srcs = ["bookshop.proto"],
