--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -4,11 +4,8 @@ load(
     "java_gapic_test",
 )
 load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
-load("//rules_java_gapic:java_gapic_pkg.bzl", "java_gapic_assembly_gradle_pkg")
 load("@rules_gapic//:gapic.bzl", "proto_library_with_info")
 load("@rules_proto//proto:defs.bzl", "proto_library")
-
-package(default_visibility = ["//visibility:public"])
 
 ####################################################
 # Integration Test Rules
@@ -37,13 +34,21 @@ API_GAPIC_TARGETS = {
     "compute": "@com_google_googleapis//google/cloud/compute/v1small:compute_small_java_gapic",
 }
 
+[filegroup(
+    name = "%s_goldens_files" % lib_name,
+    srcs = glob(
+        ["goldens/%s/**" % lib_name],
+        exclude = ["BUILD.bazel"],
+    ),
+) for lib_name in API_GAPIC_TARGETS]
+
 [sh_test(
     name = lib_name,
     srcs = ["//scripts:diff_gen_and_golden.sh"],
     args = [lib_name],
     data = [
-      gapic_target + "_srcjar_raw.srcjar",
-      "//test/integration/goldens/%s:goldens_files" % lib_name,
+      ":%s_goldens_files" % lib_name,
+      "%s_srcjar_raw.srcjar" % gapic_target,
     ],
 ) for lib_name, gapic_target in API_GAPIC_TARGETS.items()]
 
@@ -52,8 +57,8 @@ API_GAPIC_TARGETS = {
     srcs = ["//scripts:update_golden.sh"],
     args = [lib_name],
     data = [
-      gapic_target + "_srcjar_raw.srcjar",
-      "//test/integration/goldens/%s:goldens_files" % lib_name,
+      ":%s_goldens_files" % lib_name,
+      "%s_srcjar_raw.srcjar" % gapic_target,
     ],
 ) for lib_name, gapic_target in API_GAPIC_TARGETS.items()]
 
@@ -69,16 +74,6 @@ java_gapic_test(
     runtime_deps = ["@com_google_googleapis//google/cloud/asset/v1:asset_java_gapic_test"],
 )
 
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-asset-v1-java",
-    deps = [
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_gapic",
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_grpc",
-        "@com_google_googleapis//google/cloud/asset/v1:asset_java_proto",
-        "@com_google_googleapis//google/cloud/asset/v1:asset_proto",
-    ],
-)
-
 # Redis API.
 java_gapic_test(
     name = "redis_java_gapic_test_suite",
@@ -88,16 +83,6 @@ java_gapic_test(
     runtime_deps = ["@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_gapic_test"],
 )
 
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-redis-v1beta1-java",
-    deps = [
-        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_gapic",
-        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_grpc",
-        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_java_proto",
-        "@com_google_googleapis//google/cloud/redis/v1beta1:redis_proto",
-    ],
-)
-
 # Storage API.
 java_gapic_test(
     name = "storage_java_gapic_test_suite",
@@ -105,16 +90,6 @@ java_gapic_test(
         "com.google.storage.v2.StorageClientTest",
     ],
     runtime_deps = ["@com_google_googleapis//google/storage/v2:storage_java_gapic_test"],
-)
-
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-storage-v2-java",
-    deps = [
-        "@com_google_googleapis//google/storage/v2:storage_java_gapic",
-        "@com_google_googleapis//google/storage/v2:storage_java_grpc",
-        "@com_google_googleapis//google/storage/v2:storage_java_proto",
-        "@com_google_googleapis//google/storage/v2:storage_proto",
-    ],
 )
 
 # Logging API
@@ -128,16 +103,6 @@ java_gapic_test(
     runtime_deps = ["@com_google_googleapis//google/logging/v2:logging_java_gapic_test"],
 )
 
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-logging-v2-java",
-    deps = [
-        "@com_google_googleapis//google/logging/v2:logging_java_gapic",
-        "@com_google_googleapis//google/logging/v2:logging_java_grpc",
-        "@com_google_googleapis//google/logging/v2:logging_java_proto",
-        "@com_google_googleapis//google/logging/v2:logging_proto",
-    ],
-)
-
 # example/library API.
 # Tests the edge case of a legitimately missing gRPC service config file.
 java_gapic_test(
@@ -146,17 +111,6 @@ java_gapic_test(
         "com.google.cloud.example.library.v1.LibraryServiceClientTest",
     ],
     runtime_deps = ["@com_google_googleapis//google/example/library/v1:library_java_gapic_test"],
-)
-
-# Open Source Packages
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-example-library-v1-java",
-    deps = [
-        "@com_google_googleapis//google/example/library/v1:library_java_gapic",
-        "@com_google_googleapis//google/example/library/v1:library_java_grpc",
-        "@com_google_googleapis//google/example/library/v1:library_java_proto",
-        "@com_google_googleapis//google/example/library/v1:library_proto",
-    ],
 )
 
 # IAMCredentials.
@@ -168,17 +122,6 @@ java_gapic_test(
         "com.google.cloud.iam.credentials.v1.IAMCredentialsClientTest",
     ],
     runtime_deps = ["@com_google_googleapis//google/iam/credentials/v1:credentials_java_gapic_test"],
-)
-
-# Open Source Packages
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-iam-credentials-v1-java",
-    deps = [
-        "@com_google_googleapis//google/iam/credentials/v1:credentials_java_gapic",
-        "@com_google_googleapis//google/iam/credentials/v1:credentials_java_grpc",
-        "@com_google_googleapis//google/iam/credentials/v1:credentials_java_proto",
-        "@com_google_googleapis//google/iam/credentials/v1:credentials_proto",
-    ],
 )
 
 # IAM (for a standalone mixed-in API).
@@ -200,15 +143,6 @@ java_gapic_test(
         "com.google.iam.v1.IAMPolicyClientTest",
     ],
     runtime_deps = ["iam_java_gapic_test"],
-)
-
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-iam-java",
-    deps = [
-        ":iam_java_gapic",
-        "@com_google_googleapis//google/iam/v1:iam_java_grpc",
-        "@com_google_googleapis//google/iam/v1:iam_java_proto",
-    ],
 )
 
 # KMS (for mixins).
@@ -282,19 +216,6 @@ java_gapic_test(
     runtime_deps = [":kms_java_gapic_test"],
 )
 
-# Open Source Packages
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-kms-v1-java",
-    deps = [
-        ":kms_java_gapic",
-        "@com_google_googleapis//google/cloud/kms/v1:kms_java_grpc",
-        "@com_google_googleapis//google/cloud/kms/v1:kms_java_proto",
-        "@com_google_googleapis//google/cloud/kms/v1:kms_proto",
-        "@com_google_googleapis//google/cloud/location:location_java_grpc",
-        "@com_google_googleapis//google/cloud/location:location_java_proto",
-    ],
-)
-
 # PubSub
 java_gapic_library(
     name = "pubsub_java_gapic",
@@ -320,14 +241,4 @@ java_gapic_test(
         "com.google.cloud.pubsub.v1.TopicAdminClientTest",
     ],
     runtime_deps = [":pubsub_java_gapic_test"],
-)
-
-java_gapic_assembly_gradle_pkg(
-    name = "google-cloud-pubsub-v1-java",
-    deps = [
-        ":pubsub_java_gapic",
-        "@com_google_googleapis//google/pubsub/v1:pubsub_java_grpc",
-        "@com_google_googleapis//google/pubsub/v1:pubsub_java_proto",
-        "@com_google_googleapis//google/pubsub/v1:pubsub_proto",
-    ],
 )
