--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,14 +2,82 @@ load("@rules_java//java:defs.bzl", "java_binary", "java_proto_library")
 
 package(default_visibility = ["//visibility:public"])
 
-# ============= Proto wrappers =================
+# TODO: some dependencies may be runtime only.
+MAIN_DEPS = [
+    ":service_config_java_proto",
+    "@com_google_api_api_common//jar",
+    "@com_google_api_gax_java//gax",
+    "@com_google_api_gax_java//gax:gax_testlib",
+    "@com_google_api_gax_java//gax-grpc:gax_grpc",
+    "@com_google_api_gax_java//gax-grpc:gax_grpc_testlib",
+    "@com_google_api_gax_java//gax-httpjson:gax_httpjson",
+    "@com_google_api_gax_java//gax-httpjson:gax_httpjson_testlib",
+    "@com_google_api_grpc_proto_google_common_protos",
+    "@com_google_auto_value_auto_value_annotations//jar", # Ideally should be compile-time only, but this is OK.
+    "@com_google_code_gson//jar",
+    "@com_google_googleapis//gapic/metadata:metadata_java_proto",
+    "@com_google_guava_guava",
+    "@com_google_http_client_google_http_client//jar",
+    "@com_google_protobuf//:protobuf_java",
+    "@com_google_protobuf//:protobuf_java_util",
+    "@google_java_format_all_deps//jar",
+    "@io_grpc_grpc_java//api",
+    "@io_grpc_grpc_java//protobuf",
+    "@io_grpc_grpc_java//stub",
+    "@javax_annotation_javax_annotation_api//jar",
+    "@junit_junit//jar",
+    "@org_threeten_threetenbp//jar",
+    "@org_yaml_snakeyaml//jar",
+]
+
+MAIN_DEPS_DEBUG_RUNTIME_ONLY = [
+    "@com_google_googleapis//google/api:api_java_proto",
+    "@com_google_googleapis//google/cloud:extended_operations_java_proto",
+    "@com_google_googleapis//google/longrunning:longrunning_java_proto",
+    "@com_google_protobuf//java/core",
+]
+
+# Some dependencies are runtime only, but that's fine for tests.
+TEST_DEPS = [
+    ":test_java_protos",
+    "@com_google_googleapis//google/logging/v2:logging_java_proto",
+    "@com_google_googleapis//google/pubsub/v1:pubsub_java_proto",
+    "@com_google_googleapis//google/rpc:rpc_java_proto",
+    "@com_google_truth_truth//jar",
+    "@io_github_java_diff_utils//jar",
+]
 
 java_proto_library(
     name = "service_config_java_proto",
     deps = ["@io_grpc_proto//:service_config_proto"],
 )
 
-# ============= Binary targets ================
+proto_library(
+    name = "test_protos",
+    srcs = glob(["src/test/resources/*.proto"]),
+    deps = [
+        "@com_google_googleapis//google/api:annotations_proto",
+        "@com_google_googleapis//google/api:client_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:routing_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_googleapis//google/cloud:extended_operations_proto",
+        "@com_google_googleapis//google/longrunning:operations_proto",
+        "@com_google_googleapis//google/rpc:error_details_proto",
+        "@com_google_googleapis//google/rpc:status_proto",
+        "@com_google_protobuf//:duration_proto",
+        "@com_google_protobuf//:empty_proto",
+        "@com_google_protobuf//:field_mask_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+java_proto_library(
+    name = "test_java_protos",
+    deps = [
+        ":test_protos",
+        "@com_google_googleapis//google/cloud:common_resources_proto"
+    ],
+)
 
 java_plugin(
     name = "autovalue_plugin",
@@ -22,32 +90,7 @@ java_binary(
     srcs = glob(["src/main/java/**/*.java"]),
     main_class = "com.google.api.generator.Main",
     plugins = [":autovalue_plugin"],
-    deps = [
-        ":service_config_java_proto",
-        "@com_google_api_api_common//jar",
-        "@com_google_api_gax_java//gax",
-        "@com_google_api_gax_java//gax:gax_testlib",
-        "@com_google_api_gax_java//gax-grpc:gax_grpc",
-        "@com_google_api_gax_java//gax-grpc:gax_grpc_testlib",
-        "@com_google_api_gax_java//gax-httpjson:gax_httpjson",
-        "@com_google_api_gax_java//gax-httpjson:gax_httpjson_testlib",
-        "@com_google_api_grpc_proto_google_common_protos",
-        "@com_google_auto_value_auto_value_annotations//jar", # Ideally should be compile-time only, but this is OK.
-        "@com_google_code_gson//jar",
-        "@com_google_googleapis//gapic/metadata:metadata_java_proto",
-        "@com_google_guava_guava",
-        "@com_google_http_client_google_http_client//jar",
-        "@com_google_protobuf//:protobuf_java",
-        "@com_google_protobuf//:protobuf_java_util",
-        "@google_java_format_all_deps//jar",
-        "@io_grpc_grpc_java//api",
-        "@io_grpc_grpc_java//protobuf",
-        "@io_grpc_grpc_java//stub",
-        "@javax_annotation_javax_annotation_api//jar",
-        "@junit_junit//jar",
-        "@org_threeten_threetenbp//jar",
-        "@org_yaml_snakeyaml//jar",
-    ],
+    deps = MAIN_DEPS,
 )
 
 # Request dumper binary, which dumps the CodeGeneratorRequest to a file on disk
@@ -69,13 +112,7 @@ java_binary(
 java_binary(
     name = "protoc-gen-code_generator_request_dumper",
     main_class = "com.google.api.generator.debug.CodeGeneratorRequestDumper",
-    runtime_deps = [
-        ":protoc-gen-java_gapic",
-        "@com_google_googleapis//google/api:api_java_proto",
-        "@com_google_googleapis//google/cloud:extended_operations_java_proto",
-        "@com_google_googleapis//google/longrunning:longrunning_java_proto",
-        "@com_google_protobuf//java/core",
-    ],
+    runtime_deps = MAIN_DEPS_DEBUG_RUNTIME_ONLY,
 )
 
 # A binary similar to protoc-gen-java_gapic but reads the CodeGeneratorRequest
@@ -88,14 +125,29 @@ java_binary(
 java_binary(
     name = "code_generator_request_file_to_gapic_main",
     main_class = "com.google.api.generator.debug.CodeGeneratorRequestFileToGapicMain",
-    runtime_deps = [
-        ":protoc-gen-java_gapic",
-        "@com_google_googleapis//google/api:api_java_proto",
-        "@com_google_googleapis//google/cloud:extended_operations_java_proto",
-        "@com_google_googleapis//google/longrunning:longrunning_java_proto",
-        "@com_google_protobuf//java/core",
-    ],
+    runtime_deps = MAIN_DEPS_DEBUG_RUNTIME_ONLY,
 )
+
+genrule(
+    name = "basic_proto_descriptor",
+    srcs = ["src/test/resources/basic.proto"],
+    outs = ["basic_proto.descriptor"],
+    cmd = "$(location @com_google_protobuf//:protoc) " +
+          "--include_source_info --include_imports --descriptor_set_out=$(OUTS) $(SRCS)",
+    message = "Generating proto descriptor",
+    tools = ["@com_google_protobuf//:protoc"],
+)
+
+[java_test(
+    name = file[14:-5].replace('/', '_'),
+    srcs = glob(["src/test/java/**/*.java"]),
+    test_class = file[14:-5].replace('/', '.'),
+    deps = [":protoc-gen-java_gapic"] + MAIN_DEPS + TEST_DEPS,
+    data = [":basic_proto_descriptor"] + glob([
+        "src/test/java/**/*.golden",
+        "src/test/resources/**",
+    ]),
+) for file in glob(["src/test/java/**/*Test.java"])]
 
 # google-java-format
 java_binary(
